<resources>
  <string name="app_name">LoadApp</string>
  <string name="app_description">Download Files</string>

  <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
  <string name="notification_description">The Project 3 repository is downloaded</string>
  <string name="notification_button">Check the status</string>

  <string name="title_activity_detail">DetailActivity</string>

  <string name="glide_url">https://github.com/bumptech/glide</string>
  <string name="load_app_url">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>
  <string name="retrofit_url">https://github.com/square/retrofit</string>

  <string name="glide_text">Glide - Image Loading Library by BumpTech</string>
  <string name="load_app_text">LoadApp - Current repository by Udacity</string>
  <string name="retrofit_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc.</string>

  <string name="glide_notification_text">Glide repository is downloaded</string>
  <string name="load_app_notification_text">The Project 3 repository is downloaded</string>
  <string name="retrofit_notification_text">Retrofit repository is downloaded</string>

  <string name="file_name_title">File name:</string>
  <string name="status_title">Status:</string>
  <string name="status">Success</string>

  <string name="cloud_download_image">Cloud with downward pointed arrow in the center</string>
  <string name="no_button_selected_text">Please select the file to download</string>

  <string name="ok">OK</string>

  <string name="channel_description">File Download Channel</string>
  <string name="channel_id">file_download_channel</string>
  <string name="channel_name">file_download</string>

  <string name="button_name">Download</string>
  <string name="button_clicked">Clicked</string>
  <string name="button_loading">We are loading</string>

</resources>