<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layoutDescription="@xml/detail_motion_scene"
    tools:context=".DetailActivity">

  <TextView
      android:id="@+id/file_name_title"
      android:text="@string/file_name_title"
      android:textSize="@dimen/textSize"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="32dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/file_name"
      android:text="@string/glide_text"
      android:textSize="@dimen/textSize"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/file_name_title"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/status_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="64dp"
      android:text="@string/status_title"
      android:textSize="@dimen/textSize"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/file_name" />

  <TextView
      android:id="@+id/status"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="64dp"
      android:layout_marginTop="64dp"
      android:layout_marginEnd="16dp"
      android:text="@string/status"
      android:textSize="@dimen/textSize"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toEndOf="@+id/status_title"
      app:layout_constraintTop_toBottomOf="@+id/file_name" />

  <Button
      android:id="@+id/ok_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:background="@color/colorPrimaryDark"
      android:text="@string/ok"
      android:textSize="@dimen/textSize"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>