<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
  <ImageView
      android:id="@+id/downloadImgView"
      android:layout_marginTop="32dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:background="@color/dark_green"
      app:srcCompat="@drawable/new_download_icon" />
  <RadioGroup
      android:id="@+id/downloadRadioGroup"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      app:layout_constraintBottom_toTopOf="@+id/loadingButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/downloadImgView">

    <RadioButton
        android:id="@+id/glide_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/glide_text"
        android:textSize="@dimen/textSize" />

    <RadioButton
        android:id="@+id/load_app_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/load_app_text"
        android:textSize="@dimen/textSize" />

    <RadioButton
        android:id="@+id/retrofit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/retrofit_text"
        android:textSize="@dimen/textSize" />
  </RadioGroup>

  <com.example.android.loadapp.LoadingButton
      android:id="@+id/loadingButton"
      android:layout_width="match_parent"
      android:layout_height="32dp"
      android:layout_margin="24dp"
      android:background="@color/colorPrimary"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>